--- a/WindConverter/res/layout/activity_main.xml
+++ b/WindConverter/res/layout/activity_main.xml
@@ -1,5 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+ <ScrollView
+     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/scrollView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
+
+<RelativeLayout 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:onClick="onClick"
@@ -9,98 +17,131 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:id="@+id/TextView02"
+    <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/TextView01"
-        android:layout_alignBottom="@+id/TextView01"
-        android:layout_alignRight="@+id/button2"
-        android:onClick="onClick"
-        android:text="020202020"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="12sp" />
-
-    <TextView
-        android:id="@+id/textView1"
+        android:layout_marginBottom="15dp" 
+        android:orientation="vertical">    
+        
+   <TextView
+        android:id="@+id/inputUnit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button1"
-        android:layout_centerHorizontal="true"
-        android:onClick="onClick"
-        android:text="result"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="14sp" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageView1"
-        android:layout_alignTop="@+id/imageView1"
-        android:text="TextViewLand" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/imageView1"
-        android:layout_marginBottom="30dp"
-        android:text="TextViewSee" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_toLeftOf="@+id/button2"
-        android:onClick="onClick"
-        android:text="@string/inKn" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView1"
-        android:layout_alignRight="@+id/imageView1"
-        android:onClick="onClick"
-        android:text="@string/inKm" />
-
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_toLeftOf="@+id/button1"
-        android:ems="10"
-        android:inputType="numberDecimal"
-        android:text="@string/defaultVal" />
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/TextView01"
+        android:text="Input unit is: " />        
+    
+   		<!--  input -->
+	    <LinearLayout
+	        android:id="@+id/linearLayout2"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginBottom="15dp" 
+	        android:orientation="horizontal">
+	        
+		    <EditText
+		        android:id="@+id/input"
+		        android:layout_width="143dp"
+		        android:layout_height="wrap_content"
+		        android:ems="10"
+		        android:inputType="numberDecimal"
+		        android:text="@string/defaultVal" />
+		        
+	    <Button
+	        android:id="@+id/kmh"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:onClick="onClick"
+	        android:text="@string/inKm" />		
+	        
+	    <Button
+	        android:id="@+id/button1"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:onClick="onClick"
+	        android:text="@string/inKn" />	    
+	        
+	    </LinearLayout> 
+	    
+	    
+	    <!--  result -->
+		 <LinearLayout
+	        android:id="@+id/linearLayout3"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginBottom="15dp" 
+	        android:orientation="horizontal">	    
+	    
+			    <TextView
+		        android:id="@+id/textView1"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:onClick="onClick"
+		        android:text="result"
+		        android:textAppearance="?android:attr/textAppearanceLarge"
+		        android:textSize="14sp" />
+	        
+		    <TextView
+		        android:id="@+id/TextView02"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:onClick="onClick"
+		        android:text="020202020"
+		        android:textAppearance="?android:attr/textAppearanceLarge"
+		        android:textSize="12sp" /> 	     
+		     
+		 </LinearLayout>       
+		     
 
     <TextView
         android:id="@+id/TextView01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText1"
-        android:layout_below="@+id/button1"
         android:onClick="onClick"
         android:text="0101010101"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="12sp" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/button2"
-        android:text="Input unit is: " />
 
-    <ImageView
-        android:id="@+id/imageView1"
+      <ImageView
+          android:id="@+id/imageView"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentBottom="true"
+          android:layout_alignParentRight="true"
+          android:src="@drawable/beaufort_scale_0" />
+      
+    <TextView
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignParentBottom="true"
-        android:src="@drawable/beaufort_scale_0" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_marginTop="16dp"
+        android:text="TextViewLand" />
+    
+      <TextView
+        android:id="@+id/aufSee"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/imageView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:text="TextViewSee" />      
+      
+      </LinearLayout>
+
+   
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+        </LinearLayout>
+    
 
 </RelativeLayout>
+
+</ScrollView>
