--- a/WindConverter/res/layout/activity_main.xml
+++ b/WindConverter/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
 <RelativeLayout 
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:onClick="onClick"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -21,118 +21,118 @@
         android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp" 
-        android:orientation="vertical">    
-        
-   <TextView
-        android:id="@+id/inputUnit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/TextView01"
-        android:text="Input unit is: " />        
-    
-   		<!--  input -->
-	    <LinearLayout
-	        android:id="@+id/linearLayout2"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_marginBottom="15dp" 
-	        android:orientation="horizontal">
-	        
-		    <EditText
-		        android:id="@+id/input"
-		        android:layout_width="143dp"
-		        android:layout_height="wrap_content"
-		        android:ems="10"
-		        android:inputType="numberDecimal"
-		        android:text="@string/defaultVal" />
-		        
-	    <Button
-	        android:id="@+id/kmh"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:onClick="onClick"
-	        android:text="@string/inKm" />		
-	        
-	    <Button
-	        android:id="@+id/button1"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:onClick="onClick"
-	        android:text="@string/inKn" />	    
-	        
-	    </LinearLayout> 
-	    
-	    
-	    <!--  result -->
-		 <LinearLayout
-	        android:id="@+id/linearLayout3"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_marginBottom="15dp" 
-	        android:orientation="horizontal">	    
-	    
-			    <TextView
-		        android:id="@+id/textView1"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:onClick="onClick"
-		        android:text="result"
-		        android:textAppearance="?android:attr/textAppearanceLarge"
-		        android:textSize="14sp" />
-	        
-		    <TextView
-		        android:id="@+id/TextView02"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:onClick="onClick"
-		        android:text="020202020"
-		        android:textAppearance="?android:attr/textAppearanceLarge"
-		        android:textSize="12sp" /> 	     
-		     
-		 </LinearLayout>       
-		     
+        android:layout_marginBottom="0dp"
+        android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/TextView01"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:text="0101010101"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="12sp" />
+        <!-- input -->
 
-      <ImageView
-          android:id="@+id/imageView"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_alignParentBottom="true"
-          android:layout_alignParentRight="true"
-          android:src="@drawable/beaufort_scale_0" />
-      
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/imageView"
-        android:layout_marginTop="16dp"
-        android:text="TextViewLand" />
-    
-      <TextView
-        android:id="@+id/aufSee"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/imageView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:text="TextViewSee" />      
-      
-      </LinearLayout>
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:orientation="horizontal" >
 
-   
+            <EditText
+                android:id="@+id/input"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="numberDecimal"
+                android:text="@string/defaultVal" />
+
+            <Button
+                android:id="@+id/kmh"
+                android:layout_width="102dp"
+                android:layout_height="wrap_content"
+                android:onClick="onClick"
+                android:text="@string/inKm" />
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="102dp"
+                android:layout_height="wrap_content"
+                android:onClick="onClick"
+                android:text="@string/inKn" />
+        </LinearLayout>
+
+        <!-- result -->
+
+        <LinearLayout
+            android:id="@+id/linearLayout3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="onClick"
+                android:text="result"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/spacer" />
+
+            <TextView
+                android:id="@+id/windForceDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:onClick="onClick"
+                android:text="Beschreibung"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/spacer" />
+
+            <TextView
+                android:id="@+id/windForce"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="onClick"
+                android:text="Windstärke"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="277dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/beaufort_scale_0" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/imageView"
+            android:layout_marginTop="0dp"
+            android:text="TextViewLand" />
+
+        <TextView
+            android:id="@+id/aufSee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/imageView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:text="TextViewSee" />
+    </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
