--- a/WindConverter/res/layout/activity_main.xml
+++ b/WindConverter/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/input"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
-                android:ems="10"
+                android:ems="0"
                 android:inputType="numberDecimal"
                 android:text="@string/defaultVal" />
 
@@ -97,13 +97,23 @@
                 android:text="@string/spacer" />
 
             <TextView
+                android:id="@+id/windForceDescr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="onClick"
+                android:text="Windstärke: "
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="12sp" />
+            
+            <TextView
                 android:id="@+id/windForce"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="onClick"
-                android:text="Windstärke"
+                android:text="0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textSize="12sp" />
+                        
         </LinearLayout>
 
         <ImageView
